--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "homepage": "https://github.com/MTI-MarcoRH/SD2024-BienesRaices_Matricula#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
